--- a/README
+++ b/README
@@ -10,7 +10,7 @@ http://www.python-microscopy.org/doc/Installation/InstallationWithAnaconda.html
 
 2) Install the nep-fitting module by running `python setup.py install` in this directory
 
-3) Register the plugins with PYME by running `python install_plugins.py`
+3) Register the plugins with PYME by running `python install_plugin.py`
 
 Once installed, the nep-fitting functionality is accessible by choosing the 'sted_profile_fitting' module from the
 modules menu within the PYME data viewer (dh5view).
