--- a/README
+++ b/README
@@ -11,13 +11,14 @@ To install using anaconda:
 
 1) Run 'conda install -c barentine nep-fitting'
 2) Open a python terminal (run 'python') and run 'from nep_fitting import install_plugin'
+3) Close python and test installation by running 'STEDFitter' on the terminal
 
 To install using setuptools:
 
 1) Clone this repository
 2) Run 'python nep-fitting/setup.py install'
 3) Run 'python nep-fitting/nep_fitting/install_plugin.py'
-
+4) Test installation by running 'dh5view', loading an image, clicking 'modules', and selecting 'sted_psf_fitting' from the drop-down.
 
 Once installed, the nep-fitting functionality is accessible by choosing the 'sted_profile_fitting' module from the
 modules menu within the PYME data viewer (dh5view).
