--- a/README
+++ b/README
@@ -6,19 +6,21 @@ NEP-fitting is implemented as a pair of plugins for the Python Microscopy Enviro
 PYME installation instructions can be found at:
 http://www.python-microscopy.org/doc/Installation/InstallationWithAnaconda.html
 
-NEP-fitting can be installed using anaconda or setuptools.
+NEP-fitting can be installed using anaconda (general use) or setuptools (use and software development).
+
 To install using anaconda:
 
 1) Run 'conda install -c barentine nep-fitting'
-2) Open a python terminal (run 'python') and run 'from nep_fitting import install_plugin'
-3) Close python and test installation by running 'STEDFitter' on the terminal
+2) Close python and test installation by running 'STEDFitter' on the terminal, or by running 'dh5view', loading an
+image, and selecting 'sted_psf_fitting' from the 'modules' drop-down menu.
 
 To install using setuptools:
 
 1) Clone this repository
 2) Run 'python nep-fitting/setup.py install'
-3) Run 'python nep-fitting/nep_fitting/install_plugin.py'
-4) Test installation by running 'dh5view', loading an image, clicking 'modules', and selecting 'sted_psf_fitting' from the drop-down.
+3) Run 'python nep-fitting/install_plugin.py'
+4) Test installation by running 'dh5view', loading an image, and selecting 'sted_psf_fitting' from the 'modules'
+drop-down menu.
 
-Once installed, the nep-fitting functionality is accessible by choosing the 'sted_profile_fitting' module from the
+Once installed, the nep-fitting functionality is accessible by choosing the 'sted_psf_fitting' module from the
 modules menu within the PYME data viewer (dh5view).
